--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,7 +95,7 @@
         <p class="mdt">Subscribe to All Things AGURI</p>
         <form class="subscribe" onsubmit="alert('Thank you for subscription!\nWe will send you email about our updates.')">
           <div>
-            <label>Email address</label>
+            <label class="smt">Email address</label>
             <input class="inpu col-12 border-top-0 border-left-0 border-right-0" type="email" required>
           </div>
           <button class="btn btnsm btn-pri" type="submit">Join now</button>
