--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -13,9 +13,14 @@
       that may otherwise be obsolete reclaimed or ethically.
     </div>
   </div>
-  <div class="row pbt-100">
-      <div class="col">
+  <div class="intro-img row pbt-100">
+      <div class="col-12">
         <img src="./assets/img/about-us/1.png" />
+      </div>
+      <div class="intro-img-text text-center">
+        <h5>AGURI BRAND</h5>
+        <h2>&</h2>
+        <h4>PASCAL IMITATION JEWELLERY</h4>
       </div>
   </div>
 
@@ -35,7 +40,7 @@
 </div>
 
 <!--our-vision-->
-<div class="our-vision pbt-100">
+<div class="our-vision">
   <div class="our-vision-img">
     <img src="./assets/img/about-us/3.png" />
   </div>
@@ -55,7 +60,7 @@
 
 <div class="container">
   <!--our-mission-->
-  <div class="row pbt-100">
+  <div class="row our-mission pbt-100">
     <div class="our-mission-text col-5">
       <div class="col-6"><h4>Our Mission</h4></div>
       <div class="col-6"><hr></div>
