--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -86,7 +86,7 @@
       <p class="mtp">Though our AGURI jewelry designs are made to be enjoyed forever, sometimes unpleasant surprises happen.
         With this in mind, it’s best to be prepared and insured. We recommend Jeweler’s Mutual for jewelry insurance,
         as many of our past customers have had great experiences working with them.</p>
-      <button class="btn-sm" onclick="alert('Loading...')">Read more</button>
+      <button class="btn" onclick="alert('Loading...')">Read more</button>
     </div>
     <div class="col-3"></div>
   </div>
