--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,9 +25,10 @@
     </div>
   </div>
 </header>
+
 <!--NAVBAR-->
 <nav>
-  <div class="container card-nav  border-0">
+  <div class="container pbt-100 border-0">
     <ul class="nav justify-content-center">
       <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
       <!--dropdown-menu-start-->
@@ -101,6 +102,11 @@
           <button class="btn btnsm btn-pri" type="submit">Join now</button>
         </form>
       </div>
+    </div>
+
+    <!--copy-right-->
+    <div class="copy-right text-center">
+      <p>© AGURI&PIJ.2022</p>
     </div>
   </div>
 </footer>
