--- a/src/app/pages/rings/rings.component.html
+++ b/src/app/pages/rings/rings.component.html
@@ -1,4 +1,13 @@
 <div class="container">
+  <!--breadcrumb-->
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+      <li class="breadcrumb-item"><a routerLink="/shop-all">Shop All</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Rings</li>
+    </ol>
+  </nav>
+
   <!--category-top-->
   <div class="category-top row pbt-100">
     <div class="col-3">
@@ -15,23 +24,71 @@
     </div>
   </div>
 
-  <!--category-side-->
-  <div class="col-2">
-    <form>
-      <p>Collection</p>
-      <input type="checkbox" id="collection-1" name="collection-1" value="Sping Collection">
-      <label for="collection-1">   Sping Collection</label><br>
-      <input type="checkbox" id="collection-2" name="collection-2" value="Aguri Minimalism">
-      <label for="collection-2">   Aguri Minimalism</label><br>
-      <input type="checkbox" id="collection-3" name="collection-3" value="Aguri's Eternity Magic">
-      <label for="collection-3">   Eternity Magic</label><br>
-      <input type="checkbox" id="collection-4" name="collection-4" value="End-Off-Year Collection">
-      <label for="collection-4">   End-Off-Year</label><br>
-    </form>
-  </div>
+  <div class="row">
+    <!--category-side-->
+    <div class="category-side-bar col-2">
+      <form>
+        <div>
+          <p class="font-weight-bolder">Collection</p>
+          <input type="checkbox" class="check-box" id="collection-1" name="collection-1" value="Sping Collection">
+          <label for="collection-1">Sping Collection</label><br>
+          <input type="checkbox" class="check-box" id="collection-2" name="collection-2" value="Aguri Minimalism">
+          <label for="collection-2">Aguri Minimalism</label><br>
+          <input type="checkbox" class="check-box" id="collection-3" name="collection-3" value="Aguri's Eternity Magic">
+          <label for="collection-3">Eternity Magic</label><br>
+          <input type="checkbox" class="check-box" id="collection-4" name="collection-4" value="End-Off-Year Collection">
+          <label for="collection-4">End-Off-Year</label><br><br>
+        </div>
+        <div>
+          <p class="font-weight-bolder mtp">Jewellery</p>
+          <input type="checkbox" class="check-box" id="jewellery-1" name="jewellery-1" value="Natural Jewellery">
+          <label for="jewellery-1">Natural Jewellery</label><br>
+          <input type="checkbox" class="check-box" id="jewellery-2" name="jewellery-2" value="Lab-grown Jewellery">
+          <label for="jewellery-2">Lab-grown</label><br><br>
+        </div>
+        <div>
+          <p class="font-weight-bolder mtp">Materials</p>
+          <input type="checkbox" class="check-box" id="materials-1" name="materials-1" value="Gold">
+          <label for="materials-1">Gold</label><br>
+          <input type="checkbox" class="check-box" id="materials-2" name="materials-2" value="Rose Gold">
+          <label for="materials-2">Rose Gold</label><br>
+          <input type="checkbox" class="check-box" id="materials-3" name="materials-3" value="White Gold">
+          <label for="materials-3">White Gold</label><br>
+          <input type="checkbox" class="check-box" id="materials-4" name="materials-4" value="Sterling Silver">
+          <label for="materials-4">Sterling Silver</label><br><br>
+        </div>
+        <div>
+          <p class="font-weight-bolder mtp">Price</p>
+          <input type="checkbox" class="check-box" id="price-1" name="price-1" value="$500 & Under">
+          <label for="price-1">$500 & Under</label><br>
+          <input type="checkbox" class="check-box" id="price-2" name="price-2" value="$500 - $1,000">
+          <label for="price-2">$500 - $1,000</label><br>
+          <input type="checkbox" class="check-box" id="price-3" name="price-3" value="$1,000 - $2,000">
+          <label for="price-3">$1,000 - $2,000</label><br>
+          <input type="checkbox" class="check-box" id="price-4" name="price-4" value="$2,000 & More">
+          <label for="price-4">$2,000 & More</label><br><br>
+        </div>
+        <button type="submit" class="btn mtp" onclick="alert('Searching...')">Search</button>
+      </form>
+    </div>
 
-  <!--category-main-->
-  <div class="col-10">
-
+    <!--category-main-->
+    <div class="category-main col-10 row">
+      <div class="col">
+        <img src="./assets/img/rings/eternity/1.1.1.png">
+      </div>
+      <div class="col">
+        <img src="./assets/img/rings/eternity/1.1.1.png">
+      </div>
+      <div class="col">
+        <img src="./assets/img/rings/eternity/1.1.1.png">
+      </div>
+      <div class="col">
+        <img src="./assets/img/rings/eternity/1.1.1.png">
+      </div>
+      <div class="col">
+        <img src="./assets/img/rings/eternity/1.1.1.png">
+      </div>
+    </div>
   </div>
 </div>
