--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -19,7 +19,7 @@
             </div>
           </div>
           <div class="email-user user-input">
-            <label>Email address</label>
+            <label>Email address (*)</label>
             <input class="inpu" type="email" required><br>
           </div>
           <div class="subj-user user-input">
