--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -64,4 +64,210 @@
       </div>
     </div>
   </div>
+  <!--SIMILAR-PRODUCT-->
+  <div class="simi-prod">
+    <div class="row">
+      <div class="col-3">
+        <h5>Similar Products</h5>
+        <p class="smt">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
+      </div>
+      <div class="col-3">
+        <div class="card-simi">
+          <a href="#">
+            <img src="./assets/img/product-detail/simi1.png">
+          </a>
+          <div class="compare smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+            Compare
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="compare">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <h5 class="modal-title" id="exampleModalLabel">Compare Products</h5>
+                <div class="row">
+                  <div class="col-6 simi-left">
+                    <div class="itm">
+                      <a href="#">
+                        <img src="./assets/img/product-detail/compare1.png">
+                      </a>
+                      <p class="mdt">Diamond Spark Ring</p>
+                      <p class="mdt">$6,700</p>
+                    </div>
+                    <div class="jewel">
+                      <p class="mdt">Jewellery</p>
+                      <p class="smt">NaturalJewelry</p>
+                      <p class="smt">Round brilliant diamonds</p>
+                      <p class="smt">4mm width</p>
+                      <p class="smt">Carat total weight .48</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="mater">
+                      <p class="mdt">Material</p>
+                      <p class="smt">16k White gold</p>
+                    </div>
+                    <button type="button" class="btn btn-pri btnsm" data-bs-dismiss="modal">Quick add</button>
+                  </div>
+                  <div class="col-6 simi-right">
+                    <div class="itm">
+                      <a href="#">
+                        <img src="./assets/img/product-detail/compare2.png">
+                      </a>
+                      <p class="mdt">Enternity Diamond Ring</p>
+                      <p class="mdt">$7,000</p>
+                    </div>
+                    <div class="jewel">
+                      <p class="mdt">Jewellery</p>
+                      <p class="smt">Natural & Lab-grown Jewelry</p>
+                      <p class="smt">Pear brilliant diamonds</p>
+                      <p class="smt">2.5mm width x2</p>
+                      <p class="smt">Carat total weight .50</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="mater">
+                      <p class="mdt">Material</p>
+                      <p class="smt">18k Rose gold</p>
+                    </div>
+                    <button type="button" class="btn btn-pri btnsm" data-bs-dismiss="modal">Quick add</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card-simi">
+          <a href="#">
+            <img src="./assets/img/product-detail/simi2.png">
+          </a>
+          <div class="compare smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+            Compare
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="compare">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <h5 class="modal-title" id="exampleModalLabel">Compare Products</h5>
+                <div class="row">
+                  <div class="col-6 simi-left">
+                    <div class="itm">
+                      <a href="#">
+                        <img src="./assets/img/product-detail/compare1.png">
+                      </a>
+                      <p class="mdt">Diamond Spark Ring</p>
+                      <p class="mdt">$6,700</p>
+                    </div>
+                    <div class="jewel">
+                      <p class="mdt">Jewellery</p>
+                      <p class="smt">NaturalJewelry</p>
+                      <p class="smt">Round brilliant diamonds</p>
+                      <p class="smt">4mm width</p>
+                      <p class="smt">Carat total weight .48</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="mater">
+                      <p class="mdt">Material</p>
+                      <p class="smt">16k White gold</p>
+                    </div>
+                    <button type="button" class="btn btn-pri btnsm" data-bs-dismiss="modal">Quick add</button>
+                  </div>
+                  <div class="col-6 simi-right">
+                    <div class="itm">
+                      <a href="#">
+                        <img src="./assets/img/product-detail/compare2.png">
+                      </a>
+                      <p class="mdt">Enternity Diamond Ring</p>
+                      <p class="mdt">$7,000</p>
+                    </div>
+                    <div class="jewel">
+                      <p class="mdt">Jewellery</p>
+                      <p class="smt">Natural & Lab-grown Jewelry</p>
+                      <p class="smt">Pear brilliant diamonds</p>
+                      <p class="smt">2.5mm width x2</p>
+                      <p class="smt">Carat total weight .50</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="mater">
+                      <p class="mdt">Material</p>
+                      <p class="smt">18k Rose gold</p>
+                    </div>
+                    <button type="button" class="btn btn-pri btnsm" data-bs-dismiss="modal">Quick add</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="card-simi">
+          <a href="#">
+            <img src="./assets/img/product-detail/simi3.png">
+          </a>
+          <div class="compare smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+            Compare
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="compare">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <h5 class="modal-title" id="exampleModalLabel">Compare Products</h5>
+                <div class="row">
+                  <div class="col-6 simi-left">
+                    <div class="itm">
+                      <a href="#">
+                        <img src="./assets/img/product-detail/compare1.png">
+                      </a>
+                      <p class="mdt">Diamond Spark Ring</p>
+                      <p class="mdt">$6,700</p>
+                    </div>
+                    <div class="jewel">
+                      <p class="mdt">Jewellery</p>
+                      <p class="smt">NaturalJewelry</p>
+                      <p class="smt">Round brilliant diamonds</p>
+                      <p class="smt">4mm width</p>
+                      <p class="smt">Carat total weight .48</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="mater">
+                      <p class="mdt">Material</p>
+                      <p class="smt">16k White gold</p>
+                    </div>
+                    <button type="button" class="btn btn-pri btnsm" data-bs-dismiss="modal">Quick add</button>
+                  </div>
+                  <div class="col-6 simi-right">
+                    <div class="itm">
+                      <a href="#">
+                        <img src="./assets/img/product-detail/compare2.png">
+                      </a>
+                      <p class="mdt">Enternity Diamond Ring</p>
+                      <p class="mdt">$7,000</p>
+                    </div>
+                    <div class="jewel">
+                      <p class="mdt">Jewellery</p>
+                      <p class="smt">Natural & Lab-grown Jewelry</p>
+                      <p class="smt">Pear brilliant diamonds</p>
+                      <p class="smt">2.5mm width x2</p>
+                      <p class="smt">Carat total weight .50</p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="mater">
+                      <p class="mdt">Material</p>
+                      <p class="smt">18k Rose gold</p>
+                    </div>
+                    <button type="button" class="btn btn-pri btnsm" data-bs-dismiss="modal">Quick add</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--MAY YOU ALSO LIKE-->
+  <div class="also-like">
+
+  </div>
+
 </div>
