--- a/src/app/pages/rings/rings.component.html
+++ b/src/app/pages/rings/rings.component.html
@@ -28,7 +28,7 @@
     <!--category-side-->
     <div class="category-side-bar col-2">
       <form>
-        <div>
+        <div class="mbt">
           <p class="font-weight-bolder">Collection</p>
           <input type="checkbox" class="check-box" id="collection-1" name="collection-1" value="Sping Collection">
           <label for="collection-1">Sping Collection</label><br>
@@ -37,16 +37,16 @@
           <input type="checkbox" class="check-box" id="collection-3" name="collection-3" value="Aguri's Eternity Magic">
           <label for="collection-3">Eternity Magic</label><br>
           <input type="checkbox" class="check-box" id="collection-4" name="collection-4" value="End-Off-Year Collection">
-          <label for="collection-4">End-Off-Year</label><br><br>
+          <label for="collection-4">End-Off-Year</label>
         </div>
-        <div>
+        <div class="mtp mbt">
           <p class="font-weight-bolder mtp">Jewellery</p>
           <input type="checkbox" class="check-box" id="jewellery-1" name="jewellery-1" value="Natural Jewellery">
           <label for="jewellery-1">Natural Jewellery</label><br>
           <input type="checkbox" class="check-box" id="jewellery-2" name="jewellery-2" value="Lab-grown Jewellery">
-          <label for="jewellery-2">Lab-grown</label><br><br>
+          <label for="jewellery-2">Lab-grown</label>
         </div>
-        <div>
+        <div class="mtp mbt">
           <p class="font-weight-bolder mtp">Materials</p>
           <input type="checkbox" class="check-box" id="materials-1" name="materials-1" value="Gold">
           <label for="materials-1">Gold</label><br>
@@ -55,40 +55,168 @@
           <input type="checkbox" class="check-box" id="materials-3" name="materials-3" value="White Gold">
           <label for="materials-3">White Gold</label><br>
           <input type="checkbox" class="check-box" id="materials-4" name="materials-4" value="Sterling Silver">
-          <label for="materials-4">Sterling Silver</label><br><br>
+          <label for="materials-4">Sterling Silver</label>
         </div>
-        <div>
+        <div class="mtp mbt">
           <p class="font-weight-bolder mtp">Price</p>
           <input type="checkbox" class="check-box" id="price-1" name="price-1" value="$500 & Under">
-          <label for="price-1">$500 & Under</label><br>
+          <label for="price-1">$0 - $500</label><br>
           <input type="checkbox" class="check-box" id="price-2" name="price-2" value="$500 - $1,000">
           <label for="price-2">$500 - $1,000</label><br>
           <input type="checkbox" class="check-box" id="price-3" name="price-3" value="$1,000 - $2,000">
           <label for="price-3">$1,000 - $2,000</label><br>
-          <input type="checkbox" class="check-box" id="price-4" name="price-4" value="$2,000 & More">
-          <label for="price-4">$2,000 & More</label><br><br>
+          <input type="checkbox" class="check-box" id="price-4" name="price-4" value="$2,000 - $5,000">
+          <label for="price-4">$2,000 - $5,000</label><br>
+          <input type="checkbox" class="check-box" id="price-5" name="price-5" value="$5,000 & More">
+          <label for="price-5">$5,000 ⯭</label><br><br>
+          <input type="text" placeholder="Min" class="col-5">
+          <span> ～ </span>
+          <input type="text" placeholder="Max" class="col-5">
         </div>
-        <button type="submit" class="btn mtp" onclick="alert('Searching...')">Search</button>
+        <button type="submit" class="btn mtp" onclick="alert('Searching...')">Apply</button>
       </form>
     </div>
 
     <!--category-main-->
-    <div class="category-main col-10 row">
-      <div class="col">
-        <img src="./assets/img/rings/eternity/1.1.1.png">
+    <div class="category-main col-10">
+      <div class="row">
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
       </div>
-      <div class="col">
-        <img src="./assets/img/rings/eternity/1.1.1.png">
+
+      <div class="row">
+        <div class="col-6">
+          <img src="./assets/img/rings/rings.png">
+        </div>
+        <div class="col-6">
+          <div class="col-5">
+            <img src="./assets/img/rings/eternity/1.1.1.png">
+          </div>
+          <div class="col-7">
+            <img src="./assets/img/rings/eternity/1.1.1.png">
+          </div>
+        </div>
       </div>
-      <div class="col">
-        <img src="./assets/img/rings/eternity/1.1.1.png">
+
+      <div class="row">
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6>$1,599</h6>
+          </div>
+        </div>
       </div>
-      <div class="col">
-        <img src="./assets/img/rings/eternity/1.1.1.png">
-      </div>
-      <div class="col">
-        <img src="./assets/img/rings/eternity/1.1.1.png">
+
+      <div class="category-bottom mtp pbt-100 text-center">
+        <p>Showing 60 of 180</p>
+        <button class="btn-sm btn-pri">View more</button>
+        <p>Back to top</p>
       </div>
     </div>
+
   </div>
 </div>
