--- a/src/app/pages/about-us/about-us.component.css
+++ b/src/app/pages/about-us/about-us.component.css
@@ -31,9 +31,9 @@
 /**/
 
 /*our-vision*/
-/*.our-vision {*/
-/*  margin-bottom: 100px;*/
-/*}*/
+.our-vision {
+  margin-bottom: 100px;
+}
 
 .our-vision-img {
   width: fit-content;
