--- a/src/app/pages/rings/rings.component.html
+++ b/src/app/pages/rings/rings.component.html
@@ -11,16 +11,16 @@
   <!--category-top-->
   <div class="category-top row pbt-100">
     <div class="col-3">
-      <a routerLink="#"><img src="./assets/img/rings/top-bar/1.png" /></a>
+      <img src="./assets/img/rings/1.png" />
     </div>
     <div class="col-3">
-      <a routerLink="#"><img src="./assets/img/rings/top-bar/2.png" /></a>
+      <a routerLink="#"><img src="./assets/img/rings/2.png" /></a>
     </div>
     <div class="col-3">
-      <a routerLink="#"><img src="./assets/img/rings/top-bar/3.png" /></a>
+      <a routerLink="#"><img src="./assets/img/rings/3.png" /></a>
     </div>
     <div class="col-3">
-      <a routerLink="#"><img src="./assets/img/rings/top-bar/4.png" /></a>
+      <a routerLink="#"><img src="./assets/img/rings/4.png" /></a>
     </div>
   </div>
 
@@ -68,12 +68,12 @@
           <input type="checkbox" class="check-box" id="price-4" name="price-4" value="$2,000 - $5,000">
           <label for="price-4">$2,000 - $5,000</label><br>
           <input type="checkbox" class="check-box" id="price-5" name="price-5" value="$5,000 & More">
-          <label for="price-5">$5,000 ⯭</label><br><br>
+          <label for="price-5">$5,000 +</label><br><br>
           <input type="text" placeholder="Min" class="col-5">
           <span> ～ </span>
           <input type="text" placeholder="Max" class="col-5">
         </div>
-        <button type="submit" class="btn mtp" onclick="alert('Searching...')">Apply</button>
+        <button type="submit" class="btn mtp" onclick="alert('Loading...')">Apply</button>
       </form>
     </div>
 
@@ -84,139 +84,150 @@
           <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
           <div class="card-body">
             <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
+            <h6 class><i class="fa fa-cart-plus"></i> $1,599</h6>
+          </div>
+        </div>
+
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
           </div>
         </div>
         <div class="col-3 card">
           <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
           <div class="card-body">
             <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
           </div>
         </div>
         <div class="col-3 card">
           <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
           <div class="card-body">
             <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
           </div>
         </div>
         <div class="col-3 card">
           <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
           <div class="card-body">
             <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
           </div>
         </div>
         <div class="col-3 card">
           <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
           <div class="card-body">
             <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
           </div>
         </div>
         <div class="col-3 card">
           <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
           <div class="card-body">
             <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
           </div>
         </div>
         <div class="col-3 card">
           <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
           <div class="card-body">
             <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
-          </div>
-        </div>
-        <div class="col-3 card">
-          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
-          <div class="card-body">
-            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
           </div>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-6">
-          <img src="./assets/img/rings/rings.png">
-        </div>
-        <div class="col-6">
-          <div class="col-5">
-            <img src="./assets/img/rings/eternity/1.1.1.png">
+      <!--featured-product-start-->
+      <div class="mbt featured">
+        <div class="row featured-img">
+          <div class="col-6">
+            <img src="./assets/img/rings/5.png">
           </div>
-          <div class="col-7">
-            <img src="./assets/img/rings/eternity/1.1.1.png">
+          <div class="col-6">
+            <div class="row mbt">
+              <div class="col-5"><img src="./assets/img/rings/6.png"></div>
+              <div class="col-7"><img src="./assets/img/rings/7.png"></div>
+            </div>
+            <div class="row mtp">
+              <div class="col-7"><img src="./assets/img/rings/8.png"></div>
+              <div class="col-5"><img src="./assets/img/rings/9.png"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="overlay">
+          <h5>FEATURED PRODUCTS</h5>
+        </div>
+      </div>
+      <!--featured-product-end-->
+
+      <div class="row pbt-100">
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
+          </div>
+        </div>
+
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
+          </div>
+        </div>
+        <div class="col-3 card">
+          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
+          <div class="card-body">
+            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
+            <h6><i class="fa fa-cart-plus"></i> $1,599</h6>
           </div>
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-3 card">
-          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
-          <div class="card-body">
-            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
-          </div>
-        </div>
-        <div class="col-3 card">
-          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
-          <div class="card-body">
-            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
-          </div>
-        </div>
-        <div class="col-3 card">
-          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
-          <div class="card-body">
-            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
-          </div>
-        </div>
-        <div class="col-3 card">
-          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
-          <div class="card-body">
-            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
-          </div>
-        </div>
-        <div class="col-3 card">
-          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
-          <div class="card-body">
-            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
-          </div>
-        </div>
-        <div class="col-3 card">
-          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
-          <div class="card-body">
-            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
-          </div>
-        </div>
-        <div class="col-3 card">
-          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
-          <div class="card-body">
-            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
-          </div>
-        </div>
-        <div class="col-3 card">
-          <a routerLink="/product-detail"><img class="card-img-top" src="./assets/img/rings/eternity/1.1.1.png"></a>
-          <div class="card-body">
-            <p>Ring in Yellow Gold with Diamonds, 5 mm Wide</p>
-            <h6>$1,599</h6>
-          </div>
-        </div>
-      </div>
-
-      <div class="category-bottom mtp pbt-100 text-center">
+      <div class="category-bottom pbt-100 text-center">
         <p>Showing 60 of 180</p>
-        <button class="btn-sm btn-pri">View more</button>
-        <p>Back to top</p>
+        <button class="btn-more">View more</button>
+        <p class="mtp back-to-top">Back to top <i class="fa fa-chevron-circle-up fa-xl"></i></p>
       </div>
     </div>
-
   </div>
 </div>
