--- a/src/app/pages/rings/rings.component.css
+++ b/src/app/pages/rings/rings.component.css
@@ -1,4 +1,55 @@
-.category-top img:hover {
+/*CATEGORY*/
+.category-top a img:hover {
   transition: 0.5s;
   transform: scale(110%);
+}
+
+.category-side-bar .check-box {
+  margin-right: 10px;
+}
+.category-side-bar .btn {
+  width: 100%;
+  padding: 5px;
+}
+.category-side-bar .btn:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.category-main a img:hover {
+  opacity: 0.5;
+}
+.category-main .card {
+  border: none;
+  background-color: #FAF8F6;
+}
+.category-main h6 {
+  font-size: small;
+}
+
+.featured {
+  position: relative;
+}
+.overlay {
+  position: absolute;
+  top: calc(50% - 80px);
+  background: #000;
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #fff;
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  font-size: 20px;
+  padding: 50px 0;
+  text-align: center;
+}
+.featured:hover .overlay {
+  opacity: 1;
+}
+
+.back-to-top {
+  color: #999;
+}
+.back-to-top:hover {
+  color: #000;
 }
